# newborn-metabolic-health

./: .gitattributes  .gitignore  Makefile  README.md  environment.yml  environment_cpu.yml  pkg.dvc  pyproject.toml  setup.py
.dvc/: config
biobank_project/: io.py
biobank_project/deep_mtl/: sampling.py
biobank_project/sklearn_interface/: handlers.py  kfold.py
biobank_project/subgroup_discovery/: output.py  prediction_target.py  scoring.py
checkpoints/metabolic_health_index_1unit_bottleneck/: checkpointed_model.pt  model_state_dict.pt  optimizer_state_dict.pt
config/: expected_metabolite_column_order.txt  expected_metabolite_order.txt  gestational_age_ranges.txt  metabolite_labels.csv  metabolites.txt  neonatal_conditions_colspec.yml  neonatal_covariates.txt  subgdis_reduced_extval_metabolites.txt  subgroup_discovery.yml
config/ga_bwt_sex_baseline/: colspec.yml
config/ontario/: model_inference.json  model_training.json  subgroup_discovery.json  subgroup_discovery_eval.json
config/with_ga_bwt_sex/: colspec.yml
config/with_infant_sex/: colspec.yml  subgroup_discovery.yml
config/without_bpd/: colspec.yml  subgroup_discovery.yml
config/without_ivh/: colspec.yml  neonatal_covariates.txt  subgroup_discovery.yml
config/without_nec/: colspec.yml  subgroup_discovery.yml
config/without_rop/: colspec.yml  subgroup_discovery.yml
docs/: experiments.md
notebooks/: 0.1-alc-metabolite_quantile_vis.ipynb  0.1-alc-metabolite_quantile_vis_individual_level.ipynb  0.2-alc-metabolite_univariate_subgroup.ipynb
notebooks_publish/: 0.0.1-alc-metabolite_correlation_network_stats.ipynb  0.0.2-alc-metabolite_correlation_disruption_common.ipynb  0.0.3-alc-univariate_auprc_stats.ipynb  0.1-alc-metabolite_quantile_vis_individual_level.ipynb  0.2-alc-metabolite_univariate_subgroup.ipynb  1.0-alc-subgroup_comparison.ipynb  1.1-alc-statistical_tests_of_obtained_counts.ipynb  2.0-alc-with_infant_sex_model.ipynb  2.1-alc-without_ivh_model.ipynb  2.2-alc-without_nec_model.ipynb  2.3-alc-without_bpd_model.ipynb  2.4-alc-without_rop_model.ipynb
notebooks_publish/intermediate_output/: three_q_metab_tsne_coords.csv
other_envs/: auxiliary-stat-analyses.yml  ontario_eda.yml  r-3.6.3.yml  sg_test_env.yml
results/: correlation_disruption_networks_edges.csv
results/clinical_comparators/: comparator_model_scores.csv  (+2 more)
scripts/: count_conditions.R  infer_with_checkpointed_model.py  install_R_packages.R
(+743 files in other folders)
